@@ -13,6 +13,8 @@
 ### Run from Source Repository
 - [Developer Environment Guide](https://github.com/Game-Loom/GameLoom/wiki/Developer-Environment-Setup) 
 
+---
+
 ## Features
 - **Unified Game Library Management**: Combine physical and digital game libraries into a single repository.
 - **CSV Import Compatibility**: Import game data directly from platforms like Steam, Nintendo eShop, itch.io, and PlayStation.
@@ -24,58 +26,6 @@
 
 ---
 
-## Requirements for Run From Source
-- Java 22 or later
-- JavaFX 22 or later
-
-## Requirements for Run from .jar File
-- Java 22 or later
-
----
-
-## Setup
-
-### **Run From Source**
-   1. Clone the Repository:
-   ```bash
-   git clone https://github.com/your-repository/GameLoom.git
-   ```
-   2. Install JavaFX:
-      - Download JavaFX 22.0.2 SDK from [JavaFX Downloads](https://jdk.java.net/javafx22/).
-      - Set up the JavaFX module path in your IDE.
-
-   3. Run the Program:
-      - Compile and run GUIDriver.java using your preferred IDE or build tool.
-      - Ensure the JavaFX --module-path argument is configured correctly for your environment (especially if using VSCode).
-
-or
-
-### **Run from .jar File**:
-* If you prefer a video tutorial, our team has made some available at:
-   [Windows Tutorial](https://youtu.be/a2tN3ApXKEo)
-   [Linux Tutorial](https://youtu.be/aA_0lpqbn7g)
-
-   1. Download the Zip file that contains the .jar and dependencies directly above in the repository's file listings.
-   2. Extract the .zip wherever you would like, navigate a terminal window to that directory location.
-   3. System Universal Command:
-      ```bash
-        Windows Command:
-            java --module-path <insert_path_to_extracted_folder>\GameLoom\lib\windows\javafx-sdk-22.0.2\lib\ --add-modules javafx.controls,javafx.fxml -jar GameLoom.jar
-            --
-               (e.x) java --module-path C:\Users\Chris\Downloads\GameLoom\lib\windows\javafx-sdk-22.0.2\lib\ --add-modules javafx.controls,javafx.fxml -jar GameLoom.jar
-
-            
-        Linux Command:
-            java --module-path <insert_path_to_extracted_folder>/GameLoom/lib/linux/javafx-sdk-22.0.2/lib/ --add-modules javafx.controls,javafx.fxml -jar GameLoom.jar
-            --
-               (e.x) java --module-path /home/chris/Downloads/GameLoom/lib/linux/javafx-sdk-22.0.2/lib/ --add-modules javafx.controls,javafx.fxml -jar GameLoom.jar
-            
-            
-        Mac Command:
-            java --module-path <insert_path_to_extracted_folder>/GameLoom/lib/mac/javafx-sdk-22.0.2/lib/ --add-modules javafx.controls,javafx.fxml -jar GameLoom.jar
-            --
-               (e.x) java --module-path /home/chris/Downloads/GameLoom/lib/mac/javafx-sdk-22.0.2/lib/ --add-modules javafx.controls,javafx.fxml -jar GameLoom.jar
-         ```
 ## Usage:
 ### Importing Game Libraries:
   - **Steam**: Use Lorenzo Stanco's Steam Library Exporter.
@@ -90,16 +40,9 @@ or
 ### Exporting Game Libraries:
 GameLoom supports exporting your unified game library to a CSV file for external use or sharing.
 
-### Auto-Save:
-- Auto-save is enabled by default, backing up your library every 3 minutes to your home/GameLoom Exports folder.
-- A maximum of 20 auto-save files are retained in the GameLoom Exports folder located in your home directory.
-
 ## Known Limitations:
 - itch.io Exporter: Limited testing due to small dataset availability.
 - PSDLE (PlayStation): EPSDLE export functionality for PS3, PSP, and PS Vita is not currently working as of October 2024.
-
-## Contributing:
-We welcome contributions to GameLoom! If you encounter bugs, have feature requests, or want to contribute code, please submit an issue or pull request to the repository.
 
 ## Exporters:
 Below are the recommended tools for exporting game libraries from various platforms:
@@ -131,8 +74,8 @@ To make the setup and usage process easier, we’ve created tutorial videos for 
 ### License:
 GameLoom is licensed under MIT License. See the LICENSE file for more details.
 
-### Bug Reporting
-Please log bugs under [issues](https://github.com/Game-Loom/GameLoom/branches) on github.
+### Contributing & Bug Reporting
+We welcome contributions to GameLoom! If you encounter bugs, have feature requests, or want to contribute code, please submit an [issue](https://github.com/Game-Loom/GameLoom/branches) or pull request to the repository.
 
 ### Contact:
 For support or inquiries, please contact us via our support email [GameLoomHelp@gmail.com].
